@@ -74,6 +74,7 @@ GEN  gshift_right(GEN x, long n);
 
 GEN  asympnum0(GEN u, long muli, GEN alpha, long prec);
 GEN  derivnum0(GEN a, GEN code, long prec);
+GEN  derivnumk0(GEN a, GEN code, GEN ind, long prec);
 GEN  derivfun0(GEN code, GEN args, long prec);
 GEN  direuler0(GEN a, GEN b, GEN code, GEN c);
 GEN  direuler_bad(void *E, GEN (*eval)(void *, GEN), GEN a, GEN b, GEN c, GEN Sbad);
