@@ -60,4 +60,6 @@ O(x)
 O(x)
 x
 x
-Total time spent: 4
+-52635599.000000000000000000000000000000
+[1, 1, 1, 0, -3, -8, -3, 56, 217, 64, -2951, -12672, 5973, 309376]
+Total time spent: 33
