@@ -26,3 +26,6 @@ a=intformal(O(x), y)
 b=intformal(O(y), x)
 variable(a)
 variable(b)
+
+derivnumk(x=0,exp(sin(x)),16)
+round( derivnumk(x=0,exp(sin(x)),[0..13]) )
